# ApetureUI

./: .gitignore  APERTUREUI_FREEAGREEMENT.txt  CMakeLists.txt  CMakeSettings.json  COPYRIGHT.txt  README.md  wdCMakeConfig.cmake
Code/ApertureEngine/: APEngineDLL.h  APEnginePCH.cpp  CMakeLists.txt
Code/BuildSystem/CMake/: wdUtils.cmake
Code/Core/: CMakeLists.txt
Code/Core/Collection/: CollectionComponent.h  CollectionResource.h
Code/Core/Configuration/: PlatformProfile.h
Code/Core/Messages/: SetColorMessage.h
Code/Foundation/: CMakeLists.txt
Code/JSEngine/: CMakeLists.txt  JSEngineDLL.h  JSEnginePCH.cpp  JSEnginePCH.h
Code/Tools/Inspector/: CMakeLists.txt  CVarsWidget.cpp  CVarsWidget.moc.h  CVarsWidget.ui  DataTransferWidget.cpp  DataTransferWidget.moc.h  FileWidget.cpp  FileWidget.moc.h  GlobalEventsWidget.cpp  GlobalEventsWidget.moc.h  InputWidget.cpp  InputWidget.moc.h  Inspector.cpp  LogDockWidget.cpp  LogDockWidget.moc.h  LogDockWidget.ui  MainWidget.cpp  MainWidget.moc.h  MainWindow.cpp  MainWindow.moc.h  MainWindow.ui  MainWindowActions.cpp  MemoryWidget.cpp  MemoryWidget.moc.h  PluginsWidget.cpp  PluginsWidget.moc.h  ReflectionWidget.cpp  ReflectionWidget.moc.h  ResourceWidget.cpp  ResourceWidget.moc.h  StatVisWidget.cpp  StatVisWidget.moc.h  SubsystemsWidget.cpp  SubsystemsWidget.moc.h  TimeWidget.cpp  TimeWidget.moc.h  resources.qrc
Code/Utilities/: CMakeLists.txt
Code/V8Engine/: V8EngineDLL.h  V8EnginePCH.h
Code/v8Engine/: CMakeLists.txt
Data/Base/: CommonBinaries.ezExportFilter  ezProject
Data/Content/: README.md
(+372 files in other folders)
